--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,210 @@
-antiorm==1.2.1
-asgiref==3.6.0
-autopep8==1.6.0
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
-db==0.1.1
-Django==4.1.5
-django-extensions==3.2.1
-et-xmlfile==1.1.0
-idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
-numpy==1.21.3
-openai==0.19.0
-openpyxl==3.0.9
-pandas==1.3.4
-pandas-stubs==1.2.0.35
-pycodestyle==2.8.0
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-pytz==2021.3
-requests==2.26.0
-six==1.16.0
-sqlparse==0.4.3
-toml==0.10.2
-tqdm==4.62.3
-types-pytz==2022.7.1.0
-urllib3==1.26.7
-Werkzeug==2.0.2
+2captcha
+antiorm
+appdirs
+Appium
+apturl
+argcomplete
+asgiref
+astroid
+async
+attrs
+autopep8
+backcall
+bcrypt
+beautifulsoup4
+blinker
+Brlapi
+bs4
+CacheControl
+certifi
+chardet
+charset
+cliapp
+click
+colorama
+comm
+command
+configparser
+contextlib2
+contourpy
+crayons
+cryptography
+cupshelpers
+cycler
+db
+dbus
+debugpy
+decorator
+defer
+dill
+distlib
+distro
+distro
+Django
+django
+django
+duplicity
+et
+exceptiongroup
+Faker
+fasteners
+filelock
+fonttools
+future
+geckodriver
+h11
+html5lib
+httplib2
+huggingface
+HyperPyYAML
+idna
+importlib
+ipaddr
+ipykernel
+ipython
+ipython
+isort
+jedi
+jeepney
+joblib
+jupyter_client
+jupyter_core
+keyring
+kiwisolver
+language
+launchpadlib
+lazr
+lazr
+lazy
+lockfile
+louis
+macaroonbakery
+Mako
+Markdown
+MarkupSafe
+matplotlib
+matplotlib
+mccabe
+monotonic
+more
+MouseInfo
+msgpack
+mypy
+nest
+netifaces
+numpy
+nvidia
+nvidia
+nvidia
+nvidia
+oauthlib
+olefile
+opencv
+openpyxl
+outcome
+packaging
+pandas
+paramiko
+parso
+pathspec
+pep517
+pexpect
+pickleshare
+Pillow
+platformdirs
+progress
+prompt
+protobuf
+psutil
+psycopg2
+ptyprocess
+pure
+PyAutoGUI
+pycairo
+pycodestyle
+pycups
+pydub
+PyGetWindow
+Pygments
+PyGObject
+PyJWT
+pylint
+pymacaroons
+PyMsgBox
+PyNaCl
+pyparsing
+pyperclip
+pyproxywebscrapper
+PyRect
+pyRFC3339
+PyScreeze
+PySocks
+pytesseract
+python
+python
+python
+python
+python3
+pytoml
+pytweening
+pytz
+pyxdg
+PyYAML
+pyzmq
+regex
+reportlab
+requests
+retrying
+revChatGPT
+ruamel
+ruamel
+scikit
+scipy
+sdkmanager
+SecretStorage
+selenium
+selenium
+sentencepiece
+six
+sniffio
+sortedcontainers
+soupsieve
+speechbrain
+SpeechRecognition
+sqlparse
+systemd
+threadpoolctl
+tls
+toml
+tomli
+tomlkit
+torch
+torchaudio
+tornado
+tqdm
+traitlets
+trio
+trio
+ttystatus
+typed
+typing_extensions
+ubuntu
+ubuntu
+ufw
+unattended
+undetected
+unicodecsv
+urllib3
+urlparser
+usb
+virtualenv
+wadllib
+wcwidth
+webdriver
+webencodings
+websockets
+wrapt
+wsproto
+xdg
+xkit
+zipp
