--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 Django==4.1.6
 exceptiongroup==1.1.0
+Faker==17.6.0
 h11==0.14.0
 idna==3.4
 MouseInfo==0.1.3
